--- a/public/durian/html/xdmin/member/memberEdit.html
+++ b/public/durian/html/xdmin/member/memberEdit.html
@@ -59,28 +59,6 @@
 			<td class="text-start">일반회원<span class="ms-2"><a href="#" class="fs-6">등급변경</a></span></td>
 		</tr>
 		<tr>
-			<td style="width:200px;" class="bg-light text-start">가입/접속</td>
-			<td class="text-start">2022.02.17 22:12</td>
-		</tr>
-		<tr>
-			<td style="width:200px;" class="bg-light text-start">로그인</td>
-			<td class="text-start">총 로그인 119회 (마지막 로그인 : 2022.02.17)</td>
-		</tr>
-	</table>
-
-
-
-	<div class="row mb-2">
-		<div class="col col-md-12 d-flex">
-			<i class="bi bi-caret-right-square-fill text-primary"></i> 
-			<span class="ms-2 fw-bold">사이트 가입 정보</span>
-		</div>
-	</div>
-
-	<!-- table -->
-	
-	<table class="table" style="border-collapse: separate;">
-		<tr>
 			<td style="width:200px;" class="bg-light text-start">주소</td>
 			<td class="text-start">경기도 남양주시 </td>
 		</tr>
@@ -92,6 +70,20 @@
 			<td style="width:200px;" class="bg-light text-start">전화번호</td>
 			<td class="text-start">02-123-4567</td>
 		</tr>
+	</table>
+
+
+
+	<div class="row mb-2">
+		<div class="col col-md-12 d-flex">
+			<i class="bi bi-caret-right-square-fill text-primary"></i> 
+			<span class="ms-2 fw-bold">추가 정보</span>
+		</div>
+	</div>
+
+	<!-- table -->
+	
+	<table class="table" style="border-collapse: separate;">
 		<tr>
 			<td style="width:200px;" class="bg-light text-start">생년월일</td>
 			<td class="text-start">1996.06.07</td>
@@ -99,14 +91,6 @@
 		<tr>
 			<td style="width:200px;" class="bg-light text-start">성별</td>
 			<td class="text-start">남성</td>
-		</tr>
-		<tr>
-			<td style="width:200px;" class="bg-light text-start">이메일 수신동의</td>
-			<td class="text-start">예</td>
-		</tr>
-		<tr>
-			<td style="width:200px;" class="bg-light text-start">SMS 수신동의</td>
-			<td class="text-start">예</td>
 		</tr>
 		<tr>
 			<td style="width:200px;" class="bg-light text-start">마케팅 수신동의</td>
