--- a/public/durian/html/xdmin/member/memberEdit.html
+++ b/public/durian/html/xdmin/member/memberEdit.html
@@ -43,15 +43,24 @@
 		<tr>
 			<td style="width:200px;" class="bg-light text-start">이메일</td>
 			<td class="text-start">
-				<input type="text" value="yym2044">
-				@
-				<input list="emailDomainOptions" id="emailDomainDataList" placeholder="Type to search..." value="naver.com">
-					<datalist id="emailDomainOptions">
-						  <option value="naver.com">
-						  <option value="gmail.com">
-						  <option value="daum.net">
-						  <option value="nate.com">
-					</datalist>
+				<div class="row mb-2">
+					<div class="col-12">
+						<input type="text" value="yym2044">
+						@
+						<input list="emailDomainOptions" id="emailDomainDataList" placeholder="Type to search..." value="naver.com">
+							<datalist id="emailDomainOptions">
+								  <option value="naver.com">
+								  <option value="gmail.com">
+								  <option value="daum.net">
+								  <option value="nate.com">
+							</datalist>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-12 form-check ms-3">
+						<input type="checkbox" class="form-check-input" id="emailConsent"><label class="form-check-label" for="emailConsent">이메일 수신 동의</label>
+					</div>
+				</div>
 			</td>
 		</tr>
 		<tr>
