--- a/public/durian/html/xdmin/member/memberForm2.html
+++ b/public/durian/html/xdmin/member/memberForm2.html
@@ -104,12 +104,8 @@
 					</select>
 				</div>
 				<div class="col-12 col-sm-6">
-					DataList Example <input class="form-control my-2" list="datalistOptions" placeholder="Type to search">
-					<datalist id="datalistOptions">
-						<option value="">
-						<option value="">
-						<option value="">
-					</datalist>
+					추천인 
+					<input class="form-control my-2">
 				</div>
 			</div>
 
