--- a/public/durian/html/xdmin/member/memberForm.html
+++ b/public/durian/html/xdmin/member/memberForm.html
@@ -17,7 +17,7 @@
 
 
 	<form>
-		<div class="container-fluid bg-light">
+		<div class="container-fluid">
 
 			<br>
 			<div class="row">
@@ -65,12 +65,18 @@
 				</div>
 			</div>
 
-			<div class="row collapse show" id="collapseNavbar">
+			<div class="row collapse show pt-2" id="collapseNavbar">
 				<ul class="nav bg-secondary">
 					<li class="nav-item"><a class="nav-link link-light" href="#">Home</a></li>
 					<li class="nav-item"><a class="nav-link link-light" href="#">Features</a></li>
 					<li class="nav-item"><a class="nav-link link-light" href="#">시스템 관리</a></li>
-					<li class="nav-item"><a class="nav-link link-light" href="#">Dropdown</a></li>
+					<li class="nav-item dropdown"><a class="nav-link link-light dropdown-toggle" href="#" data-bs-toggle="dropdown">Dropdown</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="#">Action</a></li>
+							<li><a class="dropdown-item" href="#">Another Action</a></li>
+							<li><a class="dropdown-item" href="#">Something else here</a></li>
+						</ul>
+					</li>
 				</ul>
 			</div>
 
@@ -86,8 +92,8 @@
 			 -->
 
 		</div>
-		<br>
-		<div class="container-fluid">
+		
+		<div class="container-fluid bg-light pt-3">
 
 			<div class="width90">
 
@@ -105,7 +111,8 @@
 
 				<div class="row">
 					<div class="col-12 col-sm-5">
-						아이디<input type="text" class="form-control my-2" placeholder="영문(대소문자),숫자,특수문자">
+						아이디
+						<input type="text" class="form-control my-2" placeholder="영문(대소문자),숫자,특수문자">
 					</div>
 				</div>
 				<div class="row row-cols-2">
@@ -196,16 +203,27 @@
 					</ul>
 				</nav>
 
-				<br> <br> <br>
-				<div class="row bg-light">
-					<p class="text-center">
-						<br> <br>Copyright © Coupang Corp. 2010-2021 All Rights Reserved.
-					</p>
-					<br> <br> <br> <br> <br>
-				</div>
+				<br> 
 
 			</div>
 		</div>
+
+
+	<!-- footer -->
+
+		<div class="container-fluid">
+			<footer class="py-3 my-4">
+				<ul class="nav justify-content-center border-bottom pb-3 mb-3">
+					<li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+					<li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+					<li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
+					<li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+					<li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+				</ul>
+				<p class="text-center text-muted">© 2021 Company, Inc</p>
+			</footer>
+		</div>
+
 
 
 	</form>
