--- a/public/durian/html/xdmin/loginout/loginWeb.html
+++ b/public/durian/html/xdmin/loginout/loginWeb.html
@@ -40,6 +40,7 @@
 		</div>
 
 		<div class="row my-5 justify-content-center">
+		
 			<div class="col-12 text-center">
 				<h1 style="color: lightslategray">
 					MEMBER <span class="fw-bold">LOGIN</span>
@@ -75,7 +76,7 @@
 				</div>
 
 				<div class="col-12">
-					<button class="btn btn-outline-primary" style="width: 100%; height: 48px;">
+					<button class="btn btn-dark" style="width: 100%; height: 48px; border-radius:10px;">
 						<span class="fw-bold">로그인</span>
 					</button>
 				</div>
@@ -83,6 +84,8 @@
 
 
 		</div>
+		
+		
 
 		
 		<div class="row d-flex align-items-end border-top border-4 pb-3 pt-4">
