--- a/public/durian/html/xdmin/loginout/loginWeb.html
+++ b/public/durian/html/xdmin/loginout/loginWeb.html
@@ -7,6 +7,11 @@
 <link rel="stylesheet" href="../../../bootstrap/bootstrap-5.1.3-dist/css/bootstrap.min.css">
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
+<!-- codepen -->
+<link rel="stylesheet" href="../../../css/style.css">
+<link rel="stylesheet" href="../../../css/codepen.css">
+
 <link rel="stylesheet" href="../../../css/style.css">
 
 <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
@@ -76,8 +81,8 @@
 				</div>
 
 				<div class="col-12">
-					<button class="btn btn-dark" style="width: 100%; height: 48px; border-radius:10px;">
-						<span class="fw-bold">로그인</span>
+					<button class="btn btn-3d blue" style="width: 100%; height: 48px; border-radius:10px;">
+						<span class="fw-bold text-white">로그인</span>
 					</button>
 				</div>
 			</div>
