--- a/public/durian/html/xdmin/loginout/loginWeb2.html
+++ b/public/durian/html/xdmin/loginout/loginWeb2.html
@@ -7,7 +7,12 @@
 <link rel="stylesheet" href="../../../bootstrap/bootstrap-5.1.3-dist/css/bootstrap.min.css">
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
+<!-- codepen -->
 <link rel="stylesheet" href="../../../css/style.css">
+<link rel="stylesheet" href="../../../css/codepen.css">
+
+<script src="../../../js/codepen.js"></script>
 
 <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 
@@ -39,16 +44,18 @@
 			</div>
 		</div>
 
-		<div class="row my-5 justify-content-center">
+
+<!-- 웹 -->
+		<div class="row my-5 justify-content-center d-none d-md-block">
 
 			<div class="col-12 text-center">
 				<h1 style="color: lightslategray">
-					MEMBER <span class="fw-bold">LOGIN</span>
+					웹 MEMBER <span class="fw-bold">LOGIN</span>
 				</h1>
 			</div>
 
 
-			<!-- 웹 -->
+			
 			<div class="col-12 d-flex justify-content-center">
 
 				<div class="row justify-content-center" style="width: 600px;">
@@ -75,8 +82,7 @@
 
 					</div>
 					<div class="col-4 mt-4">
-						<button class="btn container3"
-							style="width: 100%; height: 100%; border-radius: 10px; background-color: lightslategray;">
+						<button class="btn container3 btn-3d blue" style="width: 100%; height: 100%; border-radius: 10px;">
 							<span class="fw-bold text-white">로그인</span>
 						</button>
 					</div>
@@ -97,52 +103,72 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		
+<!-- 모바일 -->
+		<div class="row my-5 justify-content-center d-md-none">
 
-			<!-- 모바일 -->
-			<!-- <div class="row justify-content-center">
+			<div class="col-12 text-center">
+				<h1 style="color: lightslategray">
+					모바일 MEMBER <span class="fw-bold">LOGIN</span>
+				</h1>
+			</div>
 
-				<div class="col-12 mt-4">
 
-					<div class="input-group input-group-lg mb-3">
-						<span class="input-group-text bg-light" id="userIcon"> <label for="Username"> <i
-								class="bi bi-person-circle text-secondary"></i>
-						</label>
-						</span>
-						<input type="text" class="form-control" id="Username" placeholder="아이디" aria-label="Username"
-							aria-describedby="userIcon">
-					</div>
+			
+			<div class="col-12 d-flex justify-content-center">
 
-					<div class="input-group input-group-lg mb-3">
-						<span class="input-group-text bg-light" id="passwordIcon"> <label for="Password"> <i
-								class="bi bi-file-lock2-fill text-secondary"></i>
-						</label>
-						</span>
-						<input type="password" class="form-control" id="Password" placeholder="비밀번호" aria-label="Password"
-							aria-describedby="passwordIcon">
-					</div>
+				<div class="row justify-content-center" style="width: 600px;">
 
-					<div class="row mb-3">
-						<div class="col-6 col-md-4 form-check ms-3">
-							<input type="checkbox" class="form-check-input" id="autoLogin" name="checkbox1" onclick="selectAll1(this)">
-							<label for="autoLogin" class="form-check-label"> <span class="fw-light"> 자동 로그인 </span>
+					<div class="col-12 mt-4">
+
+						<div class="input-group input-group-lg mb-3">
+							<!-- <span class="input-group-text bg-light" id="userIcon"> <label for="Username"> <i
+									class="bi bi-person-circle text-secondary"></i>
 							</label>
+							</span> -->
+							<input type="text" class="form-control" id="Username" placeholder="아이디" aria-label="Username"
+								aria-describedby="userIcon">
 						</div>
-						<div class="col-6 col-md-4 form-check ms-3">
-							<input type="checkbox" class="form-check-input" id="saveId" name="checkbox1"> <label for="saveId"
-								class="form-check-label"><span class="fw-light">아이디 저장</span></label>
-						</div>
-					</div>
 
+						<div class="input-group input-group-lg">
+							<!-- <span class="input-group-text bg-light" id="passwordIcon"> <label for="Password"> <i
+									class="bi bi-file-lock2-fill text-secondary"></i>
+							</label>
+							</span> -->
+							<input type="password" class="form-control" id="Password" placeholder="비밀번호" aria-label="Password"
+								aria-describedby="passwordIcon">
+						</div>
+
+					</div>
 
 				</div>
-				
-				
+			</div>
 
-			</div> -->
-
-
-
-
+			<div class="col-12 d-flex justify-content-center">
+				<div class="row d-flex justify-content-start mt-3" style="width: 600px;">
+					<div class="col-3 col-md-3 form-check ms-3">
+						<input type="checkbox" class="form-check-input" id="autoLogin" name="checkbox1" onclick="selectAll1(this)">
+						<label for="autoLogin" class="form-check-label"> <span class="fw-light"> 자동 로그인 </span>
+						</label>
+					</div>
+					<div class="col-3 col-md-3 form-check ms-3">
+						<input type="checkbox" class="form-check-input" id="saveId" name="checkbox1"> <label for="saveId"
+							class="form-check-label"><span class="fw-light">아이디 저장</span></label>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-9 mt-3" style="min-width: 350px;">
+				<button class="btn container3 btn-3d blue" style="width: 100%; height: 100%; border-radius: 10px;">
+					<span class="fw-bold text-white">로그인</span>
+				</button>
+			</div>
+			
+			<div class="col-9 mt-3 text-center" style="min-width: 400px;">
+				<a class="nodeco text-gray">아이디찾기</a> | <a class="nodeco text-gray">비밀번호찾기</a> | <a class="nodeco text-gray">회원가입</a>
+			</div>
+			
 		</div>
 
 
