--- a/public/durian/html/xdmin/loginout/loginWeb2.html
+++ b/public/durian/html/xdmin/loginout/loginWeb2.html
@@ -29,12 +29,12 @@
 
 	<div class="width80">
 
-		<div class="row d-flex align-items-end border-bottom border-4 pb-3">
-			<div class="col-4">
+		<div class="row d-flex align-items-end border-bottom border-4 py-3">
+			<div class="col-6" style="min-width: 210px;">
 				<h1 class="fw-bold">회원 로그인</h1>
 			</div>
-			<div class="col d-flex justify-content-end">
-				<nav aria-label="breadcrumb" class="pt-5">
+			<div class="col d-flex justify-content-end" style="min-width: 210px;">
+				<nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item">Home</li>
 						<li class="breadcrumb-item">로그인</li>
@@ -145,14 +145,14 @@
 				</div>
 			</div>
 
-			<div class="col-12 d-flex justify-content-center">
+			<div class="col-12 d-flex justify-content-center" style="min-width: 350px;">
 				<div class="row d-flex justify-content-start mt-3" style="width: 600px;">
-					<div class="col-3 col-md-3 form-check ms-3">
+					<div class="col-5 form-check ms-3">
 						<input type="checkbox" class="form-check-input" id="autoLogin" name="checkbox1" onclick="selectAll1(this)">
 						<label for="autoLogin" class="form-check-label"> <span class="fw-light"> 자동 로그인 </span>
 						</label>
 					</div>
-					<div class="col-3 col-md-3 form-check ms-3">
+					<div class="col-5 form-check ms-3">
 						<input type="checkbox" class="form-check-input" id="saveId" name="checkbox1"> <label for="saveId"
 							class="form-check-label"><span class="fw-light">아이디 저장</span></label>
 					</div>
