--- a/public/durian/html/xdmin/loginout/loginWeb2.html
+++ b/public/durian/html/xdmin/loginout/loginWeb2.html
@@ -28,22 +28,23 @@
 <div class="container-fluid">
 
 	<div class="width80">
-
-		<div class="row d-flex align-items-end border-bottom border-4 py-3">
-			<div class="col-6" style="min-width: 210px;">
-				<h1 class="fw-bold">회원 로그인</h1>
-			</div>
-			<div class="col d-flex justify-content-end" style="min-width: 210px;">
-				<nav aria-label="breadcrumb">
-					<ol class="breadcrumb">
-						<li class="breadcrumb-item">Home</li>
-						<li class="breadcrumb-item">로그인</li>
-						<li class="breadcrumb-item active fw-bold" aria-current="page">로그인</li>
-					</ol>
-				</nav>
+		<div class="d-none d-md-block">
+		
+			<div class="row d-flex align-items-end border-bottom border-4 py-3">
+				<div class="col-12 col-md-6">
+					<h1 class="fw-bold">회원 로그인</h1>
+				</div>
+				<div class="col col-md d-flex justify-content-end">
+					<nav aria-label="breadcrumb">
+						<ol class="breadcrumb">
+							<li class="breadcrumb-item">Home</li>
+							<li class="breadcrumb-item">로그인</li>
+							<li class="breadcrumb-item active fw-bold" aria-current="page">로그인</li>
+						</ol>
+					</nav>
+				</div>
 			</div>
 		</div>
-
 
 <!-- 웹 -->
 		<div class="row my-5 justify-content-center d-none d-md-block">
@@ -159,7 +160,7 @@
 				</div>
 			</div>
 			
-			<div class="col-9 mt-3" style="min-width: 350px;">
+			<div class="col-9 my-3" style="min-width: 350px;">
 				<button class="btn container3 btn-3d blue" style="width: 100%; height: 100%; border-radius: 10px;">
 					<span class="fw-bold text-white">로그인</span>
 				</button>
@@ -174,7 +175,7 @@
 
 
 
-		<!-- other login -->
+		<!-- social login -->
 
 		<!-- <div class="row d-flex justify-content-center">
 			<div class="col-12 text-center">다른 계정으로 로그인</div>
@@ -190,7 +191,7 @@
 		</div> -->
 
 
-		<div class="row d-flex align-items-end border-top border-4 pb-3 pt-4">
+		<div class="row d-flex align-items-end border-top border-4 pb-3 pt-4 d-none d-md-block">
 
 			<div class="bg-light p-4">
 				<div class="col-12">
