--- a/public/durian/html/xdmin/loginout/loginWeb2.html
+++ b/public/durian/html/xdmin/loginout/loginWeb2.html
@@ -29,7 +29,7 @@
 
 	<div class="width80">
 		<div class="d-none d-md-block">
-		
+
 			<div class="row d-flex align-items-end border-bottom border-4 py-3">
 				<div class="col-12 col-md-6">
 					<h1 class="fw-bold">회원 로그인</h1>
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 
-<!-- 웹 -->
+		<!-- 웹 -->
 		<div class="row my-5 justify-content-center d-none d-md-block">
 
 			<div class="col-12 text-center">
@@ -56,7 +56,7 @@
 			</div>
 
 
-			
+
 			<div class="col-12 d-flex justify-content-center">
 
 				<div class="row justify-content-center" style="width: 600px;">
@@ -105,8 +105,8 @@
 				</div>
 			</div>
 		</div>
-		
-<!-- 모바일 -->
+
+		<!-- 모바일 -->
 		<div class="row my-5 justify-content-center d-md-none">
 
 			<div class="col-12 text-center">
@@ -116,7 +116,7 @@
 			</div>
 
 
-			
+
 			<div class="col-12 d-flex justify-content-center">
 
 				<div class="row justify-content-center" style="width: 600px;">
@@ -159,72 +159,112 @@
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="col-9 my-3" style="min-width: 350px;">
 				<button class="btn container3 btn-3d blue" style="width: 100%; height: 100%; border-radius: 10px;">
 					<span class="fw-bold text-white">로그인</span>
 				</button>
 			</div>
-			
+
 			<div class="col-9 mt-3 text-center" style="min-width: 400px;">
 				<a class="nodeco text-gray">아이디찾기</a> | <a class="nodeco text-gray">비밀번호찾기</a> | <a class="nodeco text-gray">회원가입</a>
 			</div>
-			
+
 		</div>
-
-
 
 
 		<!-- social login -->
 
-		<!-- <div class="row d-flex justify-content-center">
-			<div class="col-12 text-center">다른 계정으로 로그인</div>
-			<div class="col-1 text-center">
-				<img src="../../../images/xdmin/sns_icon/icon_round_naver_48.png">
-			</div>
-			<div class="col-1 text-center">
-				<img src="../../../images/xdmin/sns_icon/icon_round_kakaotalk_48.png">
-			</div>
-			<div class="col-1 text-center">
-				<img src="../../../images/xdmin/sns_icon/icon_round_google_48.png">
-			</div>
-		</div> -->
+		<!-- 웹 -->
+		<div class="row d-flex justify-content-center g-3 d-none d-md-block mb-4">
+			<div class="col-md-12 text-center">다른 계정으로 로그인</div>
 
-
-		<div class="row d-flex align-items-end border-top border-4 pb-3 pt-4 d-none d-md-block">
-
-			<div class="bg-light p-4">
-				<div class="col-12">
-
-					<div class="row align-items-center mb-1">
-						<div class="col-6 fw-light">아직 회원이 아니세요? 회원가입을 하시면 보다 많은 혜택이 있습니다.</div>
-						<div class="col-6 text-end">
-							<a class="btn btn-outline-dark" style="width: 125px;">회원가입하기</a>
-						</div>
+			<div class="col-md-12">
+				<div class="row justify-content-center">
+					<div class="col-md-1 text-center">
+						<img src="../../../images/xdmin/sns_icon/icon_round_naver_48.png" style="border-radius: 50%;">
 					</div>
-
-					<div class="row align-items-center mb-1">
-						<div class="col-6 fw-light">아이디가 기억나지 않으세요? '아이디 찾기'를 해주세요.</div>
-						<div class="col-6 text-end">
-							<a class="btn btn-outline-dark" style="width: 125px;">아이디찾기</a>
-						</div>
+					<div class="col-md-1 text-center">
+						<img src="../../../images/xdmin/sns_icon/icon_round_kakaotalk_48.png" style="border-radius: 50%;">
 					</div>
-
-					<div class="row align-items-center">
-						<div class="col-6 fw-light">비밀번호가 기억나지 않으세요? '비밀번호 찾기'를 해주세요.</div>
-						<div class="col-6 text-end">
-							<a class="btn btn-outline-dark" style="width: 125px;">비밀번호찾기</a>
-						</div>
+					<div class="col-md-1 text-center">
+						<img src="../../../images/xdmin/sns_icon/icon_round_google_48.png" style="border-radius: 50%;">
 					</div>
-
 				</div>
 			</div>
+		</div>
 
+		<!-- 모바일 -->
+		<div class="d-flex justify-content-center d-md-none">
+			<div class="row mb-5" style="min-width: 350px;">
+				<button type="button" class="btn btn-primary mb-1">
+					<div class="row">
+						<div class="col-1 col-md-1 text-start">
+							<img src="../../../images/xdmin/sns_icon/icon_round_facebook_48.png">
+						</div>
+						<div class="col col-md fw-bold" style="margin: auto;">페이스북 계정으로 로그인</div>
+					</div>
+				</button>
+				<button type="button" class="btn btn-warning mb-1">
+					<div class="row">
+						<div class="col-1 col-md-1 text-start">
+							<img src="../../../images/xdmin/sns_icon/icon_round_kakaotalk_48.png">
+						</div>
+						<div class="col col-md fw-bold" style="margin: auto;">카카오 계정으로 로그인</div>
+					</div>
+				</button>
+				<button type="button" class="btn btn-success mb-1">
+					<div class="row">
+						<div class="col-1 col-md-1 text-start">
+							<img src="../../../images/xdmin/sns_icon/icon_round_naver_48.png">
+						</div>
+						<div class="col col-md fw-bold" style="margin: auto;">네이버 계정으로 로그인</div>
+					</div>
+				</button>
+				<button type="button" class="btn btn-default mb-1 border box-white">
+					<div class="row">
+						<div class="col-1 col-md-1 text-start">
+							<img src="../../../images/xdmin/sns_icon/icon_round_google_48.png">
+						</div>
+						<div class="col col-md fw-bold" style="margin: auto;">구글 계정으로 로그인</div>
+					</div>
+				</button>
+			</div>
 		</div>
 
 
+		<div class="footer">
+			<div class="row d-flex align-items-end border-top border-4 pb-3 pt-4 d-none d-md-block">
 
+				<div class="bg-light p-4">
+					<div class="col-12">
 
+						<div class="row align-items-center mb-1">
+							<div class="col-6 fw-light">아직 회원이 아니세요? 회원가입을 하시면 보다 많은 혜택이 있습니다.</div>
+							<div class="col-6 text-end">
+								<a class="btn btn-outline-dark" style="width: 125px;">회원가입하기</a>
+							</div>
+						</div>
+
+						<div class="row align-items-center mb-1">
+							<div class="col-6 fw-light">아이디가 기억나지 않으세요? '아이디 찾기'를 해주세요.</div>
+							<div class="col-6 text-end">
+								<a class="btn btn-outline-dark" style="width: 125px;">아이디찾기</a>
+							</div>
+						</div>
+
+						<div class="row align-items-center">
+							<div class="col-6 fw-light">비밀번호가 기억나지 않으세요? '비밀번호 찾기'를 해주세요.</div>
+							<div class="col-6 text-end">
+								<a class="btn btn-outline-dark" style="width: 125px;">비밀번호찾기</a>
+							</div>
+						</div>
+
+					</div>
+				</div>
+
+			</div>
+		</div>
 
 
 	</div>
