--- a/public/durian/html/xdmin/loginout/loginWeb2.html
+++ b/public/durian/html/xdmin/loginout/loginWeb2.html
@@ -182,6 +182,9 @@
 			<div class="col-md-12">
 				<div class="row justify-content-center">
 					<div class="col-md-1 text-center">
+						<img src="../../../images/xdmin/sns_icon/icon_round_facebook_48.png" style="border-radius: 50%;">
+					</div>
+					<div class="col-md-1 text-center">
 						<img src="../../../images/xdmin/sns_icon/icon_round_naver_48.png" style="border-radius: 50%;">
 					</div>
 					<div class="col-md-1 text-center">
@@ -197,7 +200,7 @@
 		<!-- 모바일 -->
 		<div class="d-flex justify-content-center d-md-none">
 			<div class="row mb-5" style="min-width: 350px;">
-				<button type="button" class="btn btn-primary mb-1">
+				<button type="button" class="btn btn-primary  mb-1">
 					<div class="row">
 						<div class="col-1 col-md-1 text-start">
 							<img src="../../../images/xdmin/sns_icon/icon_round_facebook_48.png">
