--- a/public/durian/html/xdmin/loginout/loginWeb2.html
+++ b/public/durian/html/xdmin/loginout/loginWeb2.html
@@ -109,9 +109,11 @@
 			
 			
 			
-			<div class="col-md-12 text-center my-4 fw-bold"><span class="p-2 container1">다른 계정으로 로그인</span></div>
+			<div class="col-md-12 text-center my-4 fw-bold">
+				<button class="btn btn-sm p-2 container3" data-bs-toggle="collapse" data-bs-target="#socialLogin">다른 계정으로 로그인</button>
+			</div>
 
-			<div class="col-md-12">
+			<div class="col-md-12 collapse show" id="socialLogin">
 				<div class="row justify-content-center">
 					<div class="col-md-1 text-center">
 						<img src="../../../images/xdmin/sns_icon/icon_round_facebook_48.png" style="border-radius: 50%;" class="btn-3d blue">
