--- a/public/durian/html/xdmin/loginout/loginWeb2.html
+++ b/public/durian/html/xdmin/loginout/loginWeb2.html
@@ -27,6 +27,8 @@
 
 <div class="container-fluid">
 
+	<div class="text-dark bi bi-arrow-left d-md-none fs-1 p-3"></div>
+
 	<div class="width80">
 		<div class="d-none d-md-block">
 
@@ -139,8 +141,8 @@
 		</div>
 
 		<!-- 모바일 -->
-		<div class="row my-5 justify-content-center d-md-none">
-
+		
+		<div class="row my-3 justify-content-center d-md-none">
 			<div class="col-12 text-center">
 				<h1 style="color: lightslategray">
 					MEMBER <span class="fw-bold">LOGIN</span>
@@ -180,7 +182,7 @@
 
 			<div class="col-12 d-flex justify-content-center" style="min-width: 350px;">
 				<div class="row d-flex justify-content-start mt-3" style="width: 600px;">
-					<div class="col-5 form-check ms-3">
+					<div class="col-5 form-check ms-4">
 						<input type="checkbox" class="form-check-input" id="autoLogin" name="checkbox1" onclick="selectAll1(this)">
 						<label for="autoLogin" class="form-check-label"> <span class="fw-light"> 자동 로그인 </span>
 						</label>
@@ -198,8 +200,12 @@
 				</button>
 			</div>
 
-			<div class="col-9 mt-3 text-center" style="min-width: 400px;">
-				<a class="nodeco text-gray">아이디찾기</a> | <a class="nodeco text-gray">비밀번호찾기</a> | <a class="nodeco text-gray">회원가입</a>
+			<div class="col-9 my-3 text-center" style="min-width: 350px;">
+				<div class="row d-flex justify-content-center align-items-center">
+					<div class="col p-2 border-end border-2"><a class="nodeco text-gray">아이디찾기</a></div>
+					<div class="col p-2"><a class="nodeco text-gray">비밀번호찾기</a></div>
+					<div class="col p-2 border-start border-2"><a class="nodeco text-gray">회원가입</a></div>
+				</div>
 			</div>
 
 		</div>
