--- a/public/Examination.html
+++ b/public/Examination.html
@@ -10,7 +10,7 @@
 
 <style type="text/css">
 
-	.logofont{
+	.font1{
 		font-weight: 600;
 		font-size: 40px;
 		line-height: 40px;
@@ -29,9 +29,9 @@
 				<div class="border border-4 p-4" style="width: 500px;">
 
 					<div class="row mb-5">
-						<div class="logofont text-center">your</div>
-						<div class="logofont text-center">Company</div>
-						<div class="logofont text-center">Logo</div>
+						<div class="font1 text-center">your</div>
+						<div class="font1 text-center">Company</div>
+						<div class="font1 text-center">Logo</div>
 					</div>
 
 					<div class="row d-flex justify-content-center g-3 border-bottom border-2 pb-3 my-3">
