--- a/public/Examination2.html
+++ b/public/Examination2.html
@@ -8,23 +8,110 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
 	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-
 <title>로그인</title>
 </head>
 
 <body>
 	<form>
-	
-	
-	
-	
-	
-	
-	
-	
-	
+
+		<div class="container-fluid">
+
+			<div class="row d-flex align-items-center my-2">
+				<div class="col-2 fw-bold fs-1">KAIONEX</div>
+				<div class="col-6 fs-4 fw-bold">ABC Management System</div>
+
+				<div class="col d-flex justify-content-end">
+					<div style="width: 40px; height: 50px;" class="rounded-circle border border-5"></div>
+				</div>
+				<div class="col-2">
+					<div class="row">Tony Chang</div>
+					<div class="row">Administrator</div>
+				</div>
+
+				<div class="col-1 text-end">
+					<select class="form-select">
+						<option>언어</option>
+					</select>
+				</div>
+			</div>
+
+
+			<div class="row my-2">
+				<nav class="navbar navbar-expand-lg navbar-light" style="background-color: deepskyblue">
+					<a class="navbar-brand" href="#">Navbar</a>
+					<div class="collapse navbar-collapse" id="navbarNav">
+						<ul class="navbar-nav">
+							<li class="nav-item"><a class="nav-link active" href="#">회원관리</a></li>
+							<li class="nav-item"><a class="nav-link" href="#">서비스관리</a></li>
+							<li class="nav-item"><a class="nav-link" href="#">사이트관리</a></li>
+							<li class="nav-item"><a class="nav-link" href="#">로그관리</a></li>
+							<li class="nav-item"><a class="nav-link" href="#">시스템관리</a></li>
+							<li class="nav-item"><a class="nav-link" href="#">시스템관리</a></li>
+						</ul>
+					</div>
+				</nav>
+			</div>
+
+			<div class="row my-2">
+				<h1>Code</h1>
+			</div>
+
+			<div class="row my-4 px-5">
+				<div class="col-6">
+					아이디 <input class="form-control" placeholder="영문(대소문자),숫자,특수문자(),4~20자리 조합">
+				</div>
+			</div>
+
+
+			<div class="row g-4 px-5 mb-5">
+
+				<div class="col-6">
+					비밀번호 <input class="form-control" placeholder="영문(대소문자),숫자,특수문자(),8~20자리 조합">
+				</div>
+				<div class="col-6">
+					비밀번호확인 <input class="form-control">
+				</div>
+
+				<div class="col-6">
+					이름 <input type="text" class="form-control">
+				</div>
+				<div class="col-6">
+					이름(영문) <input type="text" class="form-control">
+				</div>
+				<div class="col-6">
+					이름 <input type="text" class="form-control">
+				</div>
+				<div class="col-6">
+					성 <input type="text" class="form-control">
+				</div>
+				<div class="col-6">
+					이름(영문) <input type="text" class="form-control">
+				</div>
+				<div class="col-6">
+					성(영문) <input type="text" class="form-control">
+				</div>
+				<div class="col-6">
+					성별<select class="form-select"><option>::선택::</select>
+				</div>
+				<div class="col-6">
+					생일 <input type="text" class="form-control">
+				</div>
+				<div class="col-6">
+					Email <input type="text" class="form-control" placeholder="name@example.com">
+				</div>
+				<div class="col-6">
+					이메일 정보 마케팅 사용 동의
+					<div class="form-check pt-2">
+						<input id="email" type="checkbox" class="form-check-input"><label for="email" class="form-check-label">동의합니다</label>
+					</div>
+				</div>
+			</div>
+
+
+		</div>
+
 	</form>
-	
+
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
