--- a/public/Examination2.html
+++ b/public/Examination2.html
@@ -1,8 +1,8 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html lang="ko">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="uTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
