--- a/public/Examination2.html
+++ b/public/Examination2.html
@@ -17,7 +17,7 @@
 		<div class="container-fluid">
 
 			<div class="row d-flex align-items-center my-2">
-				<div class="col-2 fw-bold fs-1">KAIONEX</div>
+				<div class="col-2 fw-bold fs-1 text-center">KAIONEX</div>
 				<div class="col-6 fs-4 fw-bold">ABC Management System</div>
 
 				<div class="col d-flex justify-content-end">
