--- a/public/durian/html/xdmin/loginout/Test/loginWebTest.html
+++ b/public/durian/html/xdmin/loginout/Test/loginWebTest.html
@@ -333,16 +333,16 @@ $('a').click(function(event){
 			<div class="col-md-12 collapse show" id="socialLogin">
 				<div class="row justify-content-center">
 					<div class="col-md-1 text-center">
-						<img src="../../../images/xdmin/sns_icon/icon_round_facebook_48.png" style="border-radius: 50%;" class="btn-3d blue">
+						<img src="./icon_round_facebook_48.png" style="border-radius: 50%;" class="btn-3d blue">
 					</div>
 					<div class="col-md-1 text-center">
-						<img src="../../../images/xdmin/sns_icon/icon_round_naver_48.png" style="border-radius: 50%;" class="btn-3d green">
+						<img src="./icon_round_naver_48.png" style="border-radius: 50%;" class="btn-3d green">
 					</div>
 					<div class="col-md-1 text-center">
-						<img src="../../../images/xdmin/sns_icon/icon_round_kakaotalk_48.png" style="border-radius: 50%;" class="btn-3d yellow">
+						<img src="./icon_round_kakaotalk_48.png" style="border-radius: 50%;" class="btn-3d yellow">
 					</div>
 					<div class="col-md-1 text-center">
-						<img src="../../../images/xdmin/sns_icon/icon_round_google_48.png" style="border-radius: 50%;" class="btn-3d white">
+						<img src="./icon_round_google_48.png" style="border-radius: 50%;" class="btn-3d white">
 					</div>
 				</div>
 			</div>
