--- a/public/durian/html/xdmin/loginout/loginWeb2.html
+++ b/public/durian/html/xdmin/loginout/loginWeb2.html
@@ -85,8 +85,8 @@
 	
 						</div>
 						<div class="col-4 mt-4">
-							<button class="btn container3 btn-3d blue" style="width: 100%; height: 100%; border-radius: 10px;">
-								<span class="fw-bold text-white">로그인</span>
+							<button class="btn btn-outline-dark container3" style="width: 100%; height: 100%; border-radius: 10px;">
+								<span class="fw-bold">로그인</span>
 							</button>
 						</div>
 					
@@ -194,9 +194,9 @@
 				</div>
 			</div>
 
-			<div class="col-9 my-3" style="min-width: 350px;">
-				<button class="btn container3 btn-3d blue" style="width: 100%; height: 100%; border-radius: 10px;">
-					<span class="fw-bold text-white">로그인</span>
+			<div class="col-9 my-5" style="min-width: 350px;">
+				<button class="btn container3 btn-outline-dark" style="width: 100%; height: 100%;">
+					<span class="fw-bold">로그인</span>
 				</button>
 			</div>
 
@@ -239,7 +239,7 @@
 		<!-- 모바일 -->
 		<div class="d-flex justify-content-center d-md-none">
 			<div class="row mb-5" style="min-width: 350px;">
-				<button type="button" class="btn btn-primary btn-3d blue mb-1 text-white">
+				<button type="button" class="btn btn-primary mb-1 text-white">
 					<div class="row">
 						<div class="col-1 col-md-1 text-start">
 							<img src="../../../images/xdmin/sns_icon/icon_round_facebook_48.png">
@@ -247,7 +247,7 @@
 						<div class="col col-md fw-bold" style="margin: auto;">페이스북 계정으로 로그인</div>
 					</div>
 				</button>
-				<button type="button" class="btn btn-warning btn-3d yellow mb-1 text-white">
+				<button type="button" class="btn btn-warning mb-1 text-white">
 					<div class="row">
 						<div class="col-1 col-md-1 text-start">
 							<img src="../../../images/xdmin/sns_icon/icon_round_kakaotalk_48.png">
@@ -255,7 +255,7 @@
 						<div class="col col-md fw-bold" style="margin: auto;">카카오 계정으로 로그인</div>
 					</div>
 				</button>
-				<button type="button" class="btn btn-success btn-3d green mb-1 text-white">
+				<button type="button" class="btn btn-success mb-1 text-white">
 					<div class="row">
 						<div class="col-1 col-md-1 text-start">
 							<img src="../../../images/xdmin/sns_icon/icon_round_naver_48.png">
@@ -263,7 +263,7 @@
 						<div class="col col-md fw-bold" style="margin: auto;">네이버 계정으로 로그인</div>
 					</div>
 				</button>
-				<button type="button" class="btn btn-default mb-1 border box-white btn-3d cyan text-white">
+				<button type="button" class="btn btn-default mb-1 border border-2 box-white">
 					<div class="row">
 						<div class="col-1 col-md-1 text-start">
 							<img src="../../../images/xdmin/sns_icon/icon_round_google_48.png">
