--- a/public/durian/html/xdmin/loginout/loginWeb2.html
+++ b/public/durian/html/xdmin/loginout/loginWeb2.html
@@ -52,9 +52,14 @@
 		<div class="row my-5 justify-content-center d-none d-md-block border py-5 bg-light">
 
 			<div class="col-12 text-center">
+
+				<img src="../../../images/xdmin/coupang2.png" alt="coupang_logo" class="p-0" style="width: 195px; height: 46px;">
+
+				<!-- 
 				<h1 style="color: lightslategray">
 					MEMBER <span class="fw-bold">LOGIN</span>
 				</h1>
+				 -->
 			</div>
 
 
@@ -63,33 +68,33 @@
 
 				<div class="row justify-content-center" style="width: 600px;">
 
-						<div class="col-8 mt-4">
-	
-							<div class="input-group input-group-lg mb-3">
-								<!-- <span class="input-group-text bg-light" id="userIcon"> <label for="Username"> <i
+					<div class="col-8 mt-4">
+
+						<div class="input-group input-group-lg mb-3">
+							<!-- <span class="input-group-text bg-light" id="userIcon"> <label for="Username"> <i
 										class="bi bi-person-circle text-secondary"></i>
 								</label>
 								</span> -->
-								<input type="text" class="form-control" id="Username" placeholder="아이디" aria-label="Username"
-									aria-describedby="userIcon">
-							</div>
-	
-							<div class="input-group input-group-lg">
-								<!-- <span class="input-group-text bg-light" id="passwordIcon"> <label for="Password"> <i
+							<input type="text" class="form-control" id="Username" placeholder="아이디" aria-label="Username"
+								aria-describedby="userIcon">
+						</div>
+
+						<div class="input-group input-group-lg">
+							<!-- <span class="input-group-text bg-light" id="passwordIcon"> <label for="Password"> <i
 										class="bi bi-file-lock2-fill text-secondary"></i>
 								</label>
 								</span> -->
-								<input type="password" class="form-control" id="Password" placeholder="비밀번호" aria-label="Password"
-									aria-describedby="passwordIcon">
-							</div>
-	
+							<input type="password" class="form-control" id="Password" placeholder="비밀번호" aria-label="Password"
+								aria-describedby="passwordIcon">
 						</div>
-						<div class="col-4 mt-4">
-							<button class="btn btn-outline-dark container3" style="width: 100%; height: 100%; border-radius: 10px;">
-								<span class="fw-bold">로그인</span>
-							</button>
-						</div>
-					
+
+					</div>
+					<div class="col-4 mt-4">
+						<button class="btn btn-outline-dark container3" style="width: 100%; height: 100%; border-radius: 10px;">
+							<span class="fw-bold">로그인</span>
+						</button>
+					</div>
+
 				</div>
 			</div>
 
@@ -106,47 +111,55 @@
 					</div>
 				</div>
 			</div>
-			
-			
-			
-			
-			
+
+
+
+
+
 			<div class="col-md-12 text-center my-4 fw-bold">
-				<button class="btn btn-sm p-2 container3" data-bs-toggle="collapse" data-bs-target="#socialLogin">다른 계정으로 로그인</button>
+				<button class="btn btn-sm p-2 container3" data-bs-toggle="collapse" data-bs-target="#socialLogin">다른 계정으로
+					로그인</button>
 			</div>
 
 			<div class="col-md-12 collapse show" id="socialLogin">
 				<div class="row justify-content-center">
 					<div class="col-md-1 text-center">
-						<img src="../../../images/xdmin/sns_icon/icon_round_facebook_48.png" style="border-radius: 50%;" class="btn-3d blue">
+						<img src="../../../images/xdmin/sns_icon/icon_round_facebook_48.png" style="border-radius: 50%;"
+							class="btn-3d blue">
 					</div>
 					<div class="col-md-1 text-center">
 						<img src="../../../images/xdmin/sns_icon/icon_round_naver_48.png" style="border-radius: 50%;" class="btn-3d green">
 					</div>
 					<div class="col-md-1 text-center">
-						<img src="../../../images/xdmin/sns_icon/icon_round_kakaotalk_48.png" style="border-radius: 50%;" class="btn-3d yellow">
+						<img src="../../../images/xdmin/sns_icon/icon_round_kakaotalk_48.png" style="border-radius: 50%;"
+							class="btn-3d yellow">
 					</div>
 					<div class="col-md-1 text-center">
-						<img src="../../../images/xdmin/sns_icon/icon_round_google_48.png" style="border-radius: 50%;" class="btn-3d white">
+						<img src="../../../images/xdmin/sns_icon/icon_round_google_48.png" style="border-radius: 50%;"
+							class="btn-3d white">
 					</div>
 				</div>
 			</div>
-			
-			
-			
-			
-			
-			
-			
+
+
+
+
+
+
+
 		</div>
 
 		<!-- 모바일 -->
-		
+
 		<div class="row my-3 justify-content-center d-md-none">
 			<div class="col-12 text-center">
+
+				<img src="../../../images/xdmin/coupang2.png" alt="coupang_logo" class="p-0" style="width: 195px; height: 46px;">
+				<!-- 
 				<h1 style="color: lightslategray">
 					MEMBER <span class="fw-bold">LOGIN</span>
 				</h1>
+				 -->
 			</div>
 
 
@@ -202,9 +215,15 @@
 
 			<div class="col-9 my-3 text-center" style="min-width: 350px;">
 				<div class="row d-flex justify-content-center align-items-center">
-					<div class="col p-2 border-end border-2"><a class="nodeco text-gray">아이디찾기</a></div>
-					<div class="col p-2"><a class="nodeco text-gray">비밀번호찾기</a></div>
-					<div class="col p-2 border-start border-2"><a class="nodeco text-gray">회원가입</a></div>
+					<div class="col p-2 border-end border-2">
+						<a class="nodeco text-gray">아이디찾기</a>
+					</div>
+					<div class="col p-2">
+						<a class="nodeco text-gray">비밀번호찾기</a>
+					</div>
+					<div class="col p-2 border-start border-2">
+						<a class="nodeco text-gray">회원가입</a>
+					</div>
 				</div>
 			</div>
 
