--- a/public/durian/html/xdmin/member/memberList5.html
+++ b/public/durian/html/xdmin/member/memberList5.html
@@ -161,8 +161,7 @@
 							<li><a class="dropdown-item" href="#">Action</a></li>
 							<li><a class="dropdown-item" href="#">Another Action</a></li>
 							<li><a class="dropdown-item" href="#">Something else here</a></li>
-						</ul>
-					</li>
+						</ul></li>
 					<li>
 						<div class="col col-md d-md-block d-none">
 							<button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling">
@@ -173,19 +172,46 @@
 				</ul>
 			</div>
 
-			<div class="row">
+			<!-- NavBar 수정할 거 -->
+			
+			<div class="row d-flex align-items-center">
 				<div class="col-md-2">
-					<div class="row"><div class="col-md-12 fw-bold fs-4 text-center">관리자화면</div></div>
-					<div class="row"><div class="col-md-12 text-center">Administrator</div></div>
+					<div class="row">
+						<div class="col-md-12 fw-bold fs-4 text-center">관리자화면</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12 text-center">Administrator</div>
+					</div>
 				</div>
-				<div class="col-md-2">
-					<button class="btn btn-lg btn-light">환경설정</button>
+				<div class="col-md-1" style="width:140px;">
+					<button class="btn btn-lg box-white">
+						<div class="row">
+							<i class="bi bi-gear"></i>
+						</div>
+						<div class="row">
+							<span class="fs-6">환경설정</span>
+						</div>
+					</button>
 				</div>
-				<div class="col-md-2">
-					<button class="btn btn-lg btn-light">회원관리</button>
+				<div class="col-md-1" style="width:140px;">
+					<button class="btn btn-lg box-white">
+						<div class="row">
+							<i class="bi bi-people-fill"></i>
+						</div>
+						<div class="row">
+							<span class="fs-6">회원관리</span>
+						</div>
+					</button>
 				</div>
-				<div class="col-md-2">
-					<button class="btn btn-lg btn-light">게시판관리</button>
+				<div class="col-md-1" style="width:140px;">
+					<button class="btn btn-lg box-white">
+						<div class="row">
+							<i class="bi bi-card-list"></i>
+						</div>
+						<div class="row">
+							<span class="fs-6">게시판관리</span>
+						</div>
+					</button>
 				</div>
 			</div>
 
