--- a/public/durian/html/xdmin/member/memberList5.html
+++ b/public/durian/html/xdmin/member/memberList5.html
@@ -60,13 +60,9 @@
 				</div>
 
 			</div>
-			<div class="row box-white">
+			<div class="row box-white collapse show" id="firstRow">
 				<div class="col-10 col-md-10 fs-4 mb-2 d-md-none">Coupang Management System</div>
 				<div class="col col-md text-end d-md-none">
-
-					<button class="btn btn-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling">
-						<i class="bi bi-list"></i>
-					</button>
 				</div>
 			</div>
 
@@ -151,7 +147,7 @@
 			<!-- offcanvas end -->
 
 
-			<!-- 
+			
 			<div class="row bg-secondary">
 				<ul class="col nav">
 					<li class="nav-item"><a class="nav-link link-light">관리자화면</a></li>
@@ -171,14 +167,14 @@
 					</button>
 				</div>
 			</div>
-			 -->
+			
 			 
 			<!-- NavBar 수정할 거 -->
-
+			<!-- 
 			<div class="row d-flex align-items-center bg-secondary">
 				<div class="col-md-2">
 					<div class="row">
-						<div class="col-md-12 fw-bold fs-4 text-center text-light">관리자화면</div>
+						<div class="col-md-12 fw-bold fs-4 text-center text-light" data-bs-toggle="collapse" data-bs-target="#firstRow">관리자화면</div>
 					</div>
 					<div class="row">
 						<div class="col-md-12 text-center text-white">Administrator</div>
@@ -220,7 +216,7 @@
 					</button>
 				</div>
 			</div>
-
+ 			-->
 			<!-- 
 			<div class="row">
 				<ul class="nav bg-secondary">
